--- a/assets/scss/mixin.scss
+++ b/assets/scss/mixin.scss
@@ -25,8 +25,27 @@ $breakpoint: (
 //   ここにそれぞれの大きさでのCSS;
 // }
 
+//このサイトでの自作
+
+@mixin contentInner() {
+  width        : 100%;
+  max-width    : var(--contents-max-width);
+  margin-inline: auto;
+  padding-inline      : var(--sp-large);
+}
+
+@mixin contentsHeading() {
+  font-size : var(--fs-contents-heading);
+  color     : var(--purple);
+  text-align: center;
+  padding-block: var(--sp-large);
+}
 
 
+
+
+
+//geckouすぺしゃる
 @mixin textLink($bgColor: 'normal') {
   display        : inline-block;
   color          : var(--link-color);
