--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -13,6 +13,7 @@ $minViewport: 768;
   --black       : #333333;
   --dark-black   : #120e19;
   --darkgray    : #e8e8e8;
+  --gray: #dddddd;
   --lightgray   : #f0f0f0;
   --white       : #ffffff;
   --base-color  : var(--white);
@@ -32,8 +33,13 @@ $minViewport: 768;
   --fs-link           : 14px;
   --fs-section-heading: #{calcClamp(30, 36, $minViewport, $maxViewport)};
   --fs-service-title  : #{calcClamp(18, 24, $minViewport, $maxViewport)};
+  --fs-recruit-title  : #{calcClamp(42, 72, $minViewport, $maxViewport)};
+  --fs-recruit-subtitle  : #{calcClamp(18, 32, $minViewport, $maxViewport)};
+  --fs-contents-heading  : #{calcClamp(24, 32, $minViewport, $maxViewport)};
 
+  --fs-larger            : #{calcClamp(32, 40, $minViewport, $maxViewport)};
   --fs-medium: #{calcClamp(14, 15, $minViewport, $maxViewport)};
+  --fs-small: 12px;
   --fs-min   : 10px;
 
   
