--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -13,6 +13,7 @@ $minViewport: 768;
   --black       : #333333;
   --dark-black   : #120e19;
   --darkgray    : #e8e8e8;
+  --gray-medium: #f7f7f7;
   --gray: #dddddd;
   --lightgray   : #f0f0f0;
   --white       : #ffffff;
